Removed z-index styling on project card text to prevent images and words from overlapping navbar

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -28,7 +28,6 @@
 
 .projects__card__text {
     position: relative;
-    z-index: 2;
 }
 .projects__card img {
     width: 100%;
