--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -860,7 +860,6 @@ footer {
 
 .projects__card__text {
   position: relative;
-  z-index: 2;
 }
 
 .projects__card img {
